--- a/assets/html/modals.html
+++ b/assets/html/modals.html
@@ -913,6 +913,28 @@
     </div>
 </div>
 
+<!-- Jenkins modal -->
+<div class="modal fade" id="jenkinsModal" tabindex="-1" aria-labelledby="jenkinsLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title fs-1 fw-bold text-nowrap" id="jenkinsModalLabel"><img src="assets/img/logo/logo-jenkins-long.svg" alt="Jenkins" height="64px"></h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-justify">
+                <figure class="bg-light rounded p-3 pb-2">
+                    <blockquote class="blockquote fs-6">
+                        Jenkins est un outil open source d'intégration continue. Jenkins fonctionne dans un conteneur de servlets tel qu’Apache Tomcat, ou en mode autonome avec son propre serveur Web embarqué.
+                    </blockquote>
+                    <figcaption class="blockquote-footer text-end">
+                        Définition de <cite title="Source Title"><a class="text-reset text-decoration-none" href="https://www.wikiwand.com/fr/Jenkins_(logiciel)" target="_blank">Wikipédia</a></cite>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Google Docs modal -->
 <div class="modal fade" id="docsModal" tabindex="-1" aria-labelledby="docsLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -1100,8 +1122,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-justify">
-                <img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png?text=about+me" alt="" width="400px">
-                <figcaption class="figure-caption mt-1">Il s'agit tout simplement du site actuel présentant mes compétences, ma carrière et mes projets réalisés</figcaption>
+                <figure>
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="About-me" src="assets/img/About-me.png">
+                    <figcaption class="figure-caption mt-1">Il s'agit tout simplement du site actuel présentant mes compétences, ma carrière et mes projets réalisés</figcaption>
+                </figure>
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/alexisdechiara/about-me" target="_blank" type="button" class="btn btn-secondary"><i class="bi bi-github"></i>&nbspProjet</a>
@@ -1120,8 +1144,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-justify">
-                <img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png?text=Roll20Alternative" alt="" width="400px">
-                <figcaption class="figure-caption mt-1">Site alternatif à Roll20 réalisé pour un projet tuteuré en équipe de 6 durant mon quatrième semestre de DUT Informatique</figcaption>
+                <figure>
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="Roll20Alternative" src="assets/img/Roll20Alternative.png">
+                    <figcaption class="figure-caption mt-1">Site alternatif à Roll20 réalisé pour un projet tuteuré en équipe de 6 durant mon quatrième semestre de DUT Informatique</figcaption>
+                </figure>
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/alexisdechiara/roll20alternative" target="_blank" type="button" class="btn btn-secondary"><i class="bi bi-github"></i>&nbspProjet</a>
@@ -1140,8 +1166,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-justify">
-                <img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png?text=Utility-tools" alt="" width="400px">
-                <figcaption class="figure-caption mt-1">Site personel réalisé durant le quatrième semestre de DUT Informatique, il permet de nous aider dans certaine actions lorsque l'on fait de la réadction ou des calculs</figcaption>
+                <figure>
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="Utility-tools" src="assets/img/Utility-tools.png">
+                    <figcaption class="figure-caption mt-1">Site personel réalisé durant le quatrième semestre de DUT Informatique, il permet de nous aider dans certaine actions lorsque l'on fait de la réadction ou des calculs</figcaption>
+                </figure>
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/alexisdechiara/utility-tools" target="_blank" type="button" class="btn btn-secondary"><i class="bi bi-github"></i>&nbspProjet</a>
@@ -1160,8 +1188,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
-                <img class="img-fluid rounded ratio ratio-16x9" alt="..." src="https://via.placeholder.com/500x281.png?text=WIP" alt="" width="400px">
-                <figcaption class="figure-caption mt-1">Le projet n'est qu'a l'étape de conception</figcaption>
+                <figure>
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="WIP" src="https://via.placeholder.com/500x281.png?text=WIP" width="400px">
+                    <figcaption class="figure-caption mt-1">Le projet n'est qu'a l'étape de conception</figcaption>
+                </figure>
             </div>
         </div>
     </div>
