--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="CV et portfolio en ligne de Alexis De Chiara">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light">
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="shortcut icon" href="assets/img/favicon.ico"/>
+    <link rel="address bar icon" href="assets/img/favicon.ico">
     <!--Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <script src="assets/js/bootstrap.js" type="text/javascript"></script>
@@ -44,7 +48,7 @@
         <div class="container row g-5 justify-content-center">
             <div class="col-xs-12 col-md-10 col-lg-6 col-xl-5">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400.png?text=Place+Holder" class="card-img-top" height="400px" alt="Image de profil">
+                    <img src="assets/img/profil.jpg" class="card-img-top" alt="Image de profil" style="object-fit: cover;  object-position: center top;">
                     <div class="card-body">
                         <h2 class="card-title fs-5 fw-bold">Alexis De Chiara</h2>
                         <div class="card-text" style="text-align: justify">
@@ -201,6 +205,7 @@
                                 <img src="assets/img/logo/logo-laragon-short.svg" alt="npm" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#laragonModal" height="64px">
                                 <img src="assets/img/logo/logo-maven-short.svg" alt="Maven" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#mavenModal" height="64px">
                                 <img src="assets/img/logo/logo-apache-short.svg" alt="Apache" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#apacheModal" height="64px">
+                                <img src="assets/img/logo/logo-jenkins-short.svg" alt="Jenkins" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#jenkinsModal" height="64px">
                             </div>
                         </div>
                     </div>
@@ -241,14 +246,21 @@
                 <div class="content rounded">
                     <h3> <span class="badge bg-secondary">2019</span> Baccalauréat Scientifique</h3>
                     <p class="fs-5">Lycée Calmette</p>
-                    <p class="text-justify"><strong>Option ISN</strong> avec de la programmation en java et python, mais aussi apprentissage du html5 et css3 à part.</p>
+                    <p class="text-justify">Option ISN avec de la programmation en java et python, mais aussi apprentissage du html5 et css3 à part.</p>
                 </div>
             </div>
             <div class="timeline-container timeline-right">
                 <div class="content rounded">
                     <h3><span class="badge bg-secondary"> 2021</span> DUT Informatique</h3>
                     <p class="fs-5">IUT Nice Côte d'Azur</p>
-                    <p class="text-justify">Formation initiale menant sur l'apprentissage de l'ensemble des types de langage de programmation existants puis <strong> stage en entreprise de 4 mois à UBS Monaco en tant que développeur web</strong>.</p>
+                    <p class="text-justify">Formation initiale menant sur l'apprentissage de l'ensemble des types de langage de programmation existants.</p>
+                </div>
+            </div>
+            <div class="timeline-container timeline-left">
+                <div class="content rounded">
+                    <h3><span class="badge bg-secondary"> 2021</span> Stage en entreprise</h3>
+                    <p class="fs-5">UBS (Monaco) S.A.</p>
+                    <p class="text-justify">Stage de 4 mois pour l'obtention du DUT à UBS Monaco en tant que développeur web</p>
                 </div>
             </div>
         </div>
@@ -262,12 +274,12 @@
         <h1 class="text-center fw-bold mb-5">Portfolio</h1>
         <div class="container">
             <div class="row justify-content-center align-items-center g-5">
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=about+me" data-bs-toggle="modal" data-bs-target="#aboutMeModal" alt="About-me"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=Roll20Alternative" data-bs-toggle="modal" data-bs-target="#roll20AlternativeModal" alt="Roll20Alternative"></div>
-                <div class="cocol-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=Utility-tools" data-bs-toggle="modal" data-bs-target="#utilitytoolsModal" alt="Utility-tools"></div>
-                <div class="cocol-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP" ></div>
-                <div class="cocol-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
-                <div class="cocol-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="assets/img/About-me.png" data-bs-toggle="modal" data-bs-target="#aboutMeModal" alt="About-me"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="assets/img/Roll20Alternative.png" data-bs-toggle="modal" data-bs-target="#roll20AlternativeModal" alt="Roll20Alternative"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="assets/img/Utility-tools.png" data-bs-toggle="modal" data-bs-target="#utilitytoolsModal" alt="Utility-tools"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP" ></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
             </div>
         </div>
     </div>
@@ -276,7 +288,8 @@
         </path>
     </svg>
     <div class="container-fluid bg-dark text-light row justify-content-center" id="contact" style="margin:0">
-        <h1 class="col-12 text-center fw-bold mb-5">Contact</h1>
+        <h1 class="col-12 text-center fw-bold">Contact</h1>
+        <!--
         <form class="row" method="POST" style="width: 750px;">
             <div class="col-12">
                 <div class="mb-3">
@@ -302,7 +315,14 @@
             </div>
         </form>
         <?php include 'assets/php/send_email.php';?>
+        -->
         <div class="row justify-content-center g-5">
+            <div class="col-auto">
+                <a href="mailto:alexis.de-chiara@hotmail.fr" class="d-flex flex-column text-decoration-none text-light text-wrap">
+                    <i class="fas fa-envelope fs-1 align-self-center"></i>
+                    <span class="fs-4 align-self-center lh-lg">Courriel</span>
+                </a>
+            </div>
             <div class="col-auto">
                 <a href="https://github.com/alexisdechiara" class="d-flex flex-column text-decoration-none text-light text-wrap">
                     <i class="fab fa-github fs-1 align-self-center"></i>
@@ -328,7 +348,7 @@
     <div class="container-fluid bg-dark text-light text-center p-3">
         <div class="row">
             <div class="col-xs-12 col-md-3 text-md-start">
-                Site sous license MIT
+                © 2021 Tous droits réservés
             </div>
             <div class="col-xs-12 col-md-6 text-md-center">
                 Réalisé par Alexis De Chiara
@@ -339,6 +359,5 @@
         </div>
     </div>
 </footer>
-<?php include "assets/html/modals.html" ?>
 </body>
 </html>
